# saute

./: .gitignore  README.md  docker-compose.yml  panorama-config.xml.md  pyproject.toml
.github/: backend_ci.yml
.github/workflows/: backend.yml  pages.yml
backend/: .env.example  .env_example  Dockerfile  Dockerfile.arm  Dockerfile.x86_64  docker-compose.yml  requirements.txt  schema.yml  start.sh
backend/accounts/: admin.py  forms.py  models.py  tests.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/api/: permissions.py  serializers.py  tests.py  urls.py  views.py
backend/django_project/: celery.py  settings.py  urls.py
backend/fixtures/: firewalls.json  panoramas.json
backend/pages/: tests.py
backend/pandashboard/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/pandashboard/scripts/: __init__.py  export_rules_to_csv.py  get_system_info.py  upload_cert_chain.py  upload_tls_chain.py
backend/panosync/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
backend/panosync/migrations/: 0001_initial.py  0002_panorama_image_prisma_image.py
backend/pansync/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/pansync/migrations/: 0001_initial.py  0002_jobs.py
backend/pansync/scripts/: export_rules_to_csv.py
backend/saute/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/saute/migrations/: 0001_initial.py  0002_conversation_message.py  0003_script.py
backend/saute/scripts/: __init__.py
backend/static/css/: base.css
backend/staticfiles/: staticfiles.json
backend/staticfiles/css/: base.css
backend/templates/: _base.html  about.html  home.html
backend/templates/account/: email_confirm.html  login.html  logout.html  signup.html
backend/templates/panosync/: panorama_detail.html  panorama_list.html  prisma_detail.html  prisma_list.html
backend/templates/registration/: login.html  signup.html
docs/: index.html
frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/src/: declarations.d.ts  index.html  main.ts  pan.dashboard.scss  saute.dashboard.scss  test.ts
frontend/src/app/: api.service.ts  app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  auth.guard.ts  auth.interceptor.ts  auth.service.ts
frontend/src/components/: public-api.ts  (+1 more)
(+432 files in other folders)
