[tool.poetry]
name = "prisma-panorama-diffsync"
version = "0.1.0"
description = "Backend Django web server"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "prisma_panorama_diffsync"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.0.0,<4.1.0"
djangorestframework = "^3.14.0"
django-cors-headers = ">=3.10.0,<3.11.0"
whitenoise = "5.3.0"
gunicorn = ">=20.1.0,<20.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
