[tool.poetry]
name = "pan-dashboard"
version = "0.1.0"
description = "Backend Django web server"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.0.0,<4.1.0"
djangorestframework = "^3.14.0"
django-cors-headers = ">=3.10.0,<3.11.0"
whitenoise = "5.3.0"
gunicorn = ">=20.1.0,<20.2.0"
dj-rest-auth = "2.1.11"
django-allauth = ">=0.48.0,<0.49.0"
drf-spectacular = ">=0.24.0,<0.25.0"
environs = {version = ">=9.5.0,<9.6.0", extras = ["django"]}
psycopg2 = "2.9.3"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
