[tool.poetry]
name = "saute"
version = "0.1.0"
description = "Backend Django web server"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.0.0,<4.1.0"
djangorestframework = "^3.14.0"
django-cors-headers = ">=3.10.0,<3.11.0"
whitenoise = "5.3.0"
gunicorn = ">=20.1.0,<20.2.0"
dj-rest-auth = "2.1.11"
django-allauth = ">=0.48.0,<0.49.0"
drf-spectacular = ">=0.24.0,<0.25.0"
environs = {version = ">=9.5.0,<9.6.0", extras = ["django"]}
psycopg2 = "2.9.3"
psycopg2-binary = "^2.9.5"
pan-os-python = "^1.8.1"
celery = {extras = ["redis"], version = "^5.2.7"}
xmltodict = "^0.13.0"
get-certificate-chain = "^0.1.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
